--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,153 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="16dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingTop="16dp"
+    android:background="@color/background"
     tools:context=".MainActivity">
 
-    <TextView
+
+
+    <TableLayout
+        android:id="@+id/table_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_margin="18dp"
+        android:background="@color/white"
+        android:stretchColumns="*"
+        >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+
+            <Button
+                android:id="@+id/btn00"
+                android:background="@color/colorAccent"
+                android:layout_width="wrap_content"
+                android:layout_height="100dp"
+                android:text="@string/space"
+                android:layout_margin="6dp"
+                android:textSize="72sp" />
+
+            <Button
+                android:id="@+id/btn01"
+                android:background="@color/colorAccent"
+                android:layout_width="wrap_content"
+                android:layout_height="100dp"
+                android:text="@string/space"
+                android:layout_margin="6dp"
+                android:textSize="72sp" />
+
+            <Button
+                android:id="@+id/btn02"
+                android:background="@color/colorAccent"
+                android:layout_width="wrap_content"
+                android:layout_height="100dp"
+                android:text="@string/space"
+                android:layout_margin="6dp"
+                android:textSize="72sp" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/btn10"
+                android:background="@color/colorAccent"
+                android:layout_width="wrap_content"
+                android:layout_height="100dp"
+                android:text="@string/space"
+                android:layout_margin="6dp"
+                android:textSize="72sp" />
+
+            <Button
+                android:id="@+id/btn11"
+                android:background="@color/colorAccent"
+                android:layout_width="wrap_content"
+                android:layout_height="100dp"
+                android:text="@string/space"
+                android:layout_margin="6dp"
+                android:textSize="72sp" />
+
+            <Button
+                android:id="@+id/btn12"
+                android:background="@color/colorAccent"
+                android:layout_width="wrap_content"
+                android:layout_height="100dp"
+                android:text="@string/space"
+                android:layout_margin="6dp"
+                android:textSize="72sp" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/btn20"
+                android:background="@color/colorAccent"
+                android:layout_width="wrap_content"
+                android:layout_height="100dp"
+                android:text="@string/space"
+                android:layout_margin="6dp"
+                android:textSize="72sp" />
+
+            <Button
+                android:id="@+id/btn21"
+                android:background="@color/colorAccent"
+                android:layout_width="wrap_content"
+                android:layout_height="100dp"
+                android:text="@string/space"
+                android:layout_margin="6dp"
+                android:textSize="72sp" />
+
+            <Button
+                android:id="@+id/btn22"
+                android:background="@color/colorAccent"
+                android:layout_width="wrap_content"
+                android:layout_height="100dp"
+                android:text="@string/space"
+                android:layout_margin="6dp"
+                android:textSize="72sp" />
+
+        </TableRow>
+
+
+    </TableLayout>
+
+    <TextView
+        android:id="@+id/message_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/table_layout"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:text="@string/x_turn"
+        android:textSize="36sp"
+        android:textColor="@color/colorAccent"
+        android:textStyle="bold"
+        />
+
+    <Button
+        android:id="@+id/new_game_btn"
+        android:background="@color/colorAccent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/new_game"
+        android:layout_below="@+id/table_layout"
+        android:layout_alignRight="@id/table_layout"
+        android:layout_alignEnd="@id/table_layout"/>
+
+</RelativeLayout>
